inicia project en git

--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,7 +1,7 @@
 <nav>
     <div class = "menu_tienda">
         <div class= "items_menu_tienda" ><a href="/">Inicio</a></div>
-        <div class= "items_menu_tienda" ><a href="/productos/list">Productos</a></div>
+        <div class= "items_menu_tienda" ><a href="/products/list">Productos</a></div>
         <div class= "items_menu_tienda" ><a href="#">Ofertas</a></div>        
         
         <div class= "items_menu_tienda" ><a href="/contacto">Contacto</a></div>
