--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> <%= title %></title>
+<title>Chaltu Bags   Inicio </title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         rel="stylesheet" />
@@ -123,7 +123,7 @@
                 </div>
             </article>
         </div>  
-        <a href="/productos/create">Crear producto</a>
+        
     </section>
 </main>
 <!-- footer -->
