--- a/views/creacionProd.ejs
+++ b/views/creacionProd.ejs
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuevo Producto</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chaltu Bags   Inicio </title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+            rel="stylesheet" />
+            <script src="https://kit.fontawesome.com/997049d577.js" crossorigin="anonymous"></script>
+            
+            <link rel="stylesheet" href="../css/styles.css">
+    
+    </head>
+    
 <body>
-    <form action="/create" method="POST">
+    <header class = "top-header"> 
+        <a href="#main">ir al contenido principal </a>
+        <div class = "logoybarra">
+        <img src="../images/logo_chaltu_bags.jpg" class = "logo"  alt="logo">
+        <h1>
+            CHALTU Bags
+        </h1>
+        
+        <div class="form" action="#" method="GET" role="search">
+            <div class="input">Buscar mochilas, Riñoneras y más<i class="fa fa-search"></i></div>
+          </i>
+        </div>
+        <h2>
+            <div class="compraencuotas"> <i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y con tarjeta de crédito de todos los bancos</div>
+        </h2>
+        </div>
+
+           
+
+    <%- include("./partial/navbar") -%>
+</header>
+
+<div class="tituloform">
+<h2 class="titulo"> Completa tus datos</h2> 
+    <form class="listadoform"  action="/create" method="POST">
         <div>
             <label for="imagen">Imagen</label>
             <input type="file" name="imagen" id="imagen" value="src=../img/placa.jpg" placeholder="Ingresar imagen">
@@ -17,27 +49,29 @@
         
         <div>
             <label for="articulo">Articulo</label>
-            <input type="text" name="articulo" id="articulo" placeholder="Ingresar articulo" required autofocus>
+            <input type="text" class="ingresodato" name="articulo" id="articulo" placeholder="Ingresar articulo" required autofocus>
         </div>
         <br>
         
         <div>
             <label for="modelo">Modelo</label>
-            <input type="text" name="modelo" id="modelo" placeholder="Ingresar modelo">
+            <input type="text" class="ingresodato" name="modelo" id="modelo" placeholder="Ingresar modelo">
         </div>
         <br>
         <div>
             <label for="precio">Precio</label>
-            <input type="number" name="precio" placeholder="Ingresar precio">
+            <input type="number"  class="ingresodato" name="precio" placeholder="Ingresar precio">
         </div>
         <br>
-        <div>
+        <div class = "botonenviar">
             <input type="submit" value="Guardar Producto">
         </div>
         <br>
     </form>
-    <div>
+    <div class="boton">
         <a href="/products/list">Volver</a>
     </div>
+	</div>
+	<%- include('./partial/footer') -%>
 </body>
 </html>
