cambios en front de details y create

--- a/views/products/creacionProd.ejs
+++ b/views/products/creacionProd.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chaltu Bags   Inicio </title>
+    <title>Chaltu Bags    </title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
             <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
             rel="stylesheet" />
@@ -34,44 +34,44 @@
 
            
 
-    <%- include("./partial/navbar") -%>
+    <%- include("../partial/navbar") -%>
 </header>
-
+<main>
 <div class="tituloform">
 <h2 class="titulo"> Completa tus datos</h2> 
+</div>
     <form class="listadoform"  action="/create" method="POST">
-        <div>
-            <label for="imagen">Imagen</label>
-            <input type="file" name="imagen" id="imagen" value="src=../img/placa.jpg" placeholder="Ingresar imagen">
-        </div>
-        <br>
-        
-        
+                
         <div>
             <label for="articulo">Articulo</label>
             <input type="text" class="ingresodato" name="articulo" id="articulo" placeholder="Ingresar articulo" required autofocus>
         </div>
-        <br>
         
         <div>
             <label for="modelo">Modelo</label>
             <input type="text" class="ingresodato" name="modelo" id="modelo" placeholder="Ingresar modelo">
         </div>
-        <br>
+
         <div>
             <label for="precio">Precio</label>
             <input type="number"  class="ingresodato" name="precio" placeholder="Ingresar precio">
         </div>
-        <br>
+
+        <div>
+            <label for="imagen">Imagen</label>
+            <input type="file" name="imagen" id="imagen" value="src=../img/placa.jpg" placeholder="Ingresar imagen">
+        </div>
+        
         <div class = "botonenviar">
             <input type="submit" value="Guardar Producto">
         </div>
-        <br>
+        
     </form>
     <div class="boton">
         <a href="/products/list">Volver</a>
     </div>
-	</div>
-	<%- include('./partial/footer') -%>
+	
+</main>
+	<%- include('../partial/footer') -%>
 </body>
 </html>
