--- a/views/products/list.ejs
+++ b/views/products/list.ejs
@@ -53,9 +53,10 @@
         
     <% }) %>
     <div> 
-    <a href="/create">Nuevo producto</a>
+    <a href="/products/create">Agregar  Producto</a>
 </div>
     </main>
+    <!-- site footer -->
     <%- include('../partial/footer') -%>
     
     
