campo descripción y otros cambios de frontend

--- a/views/products/creacionProd.ejs
+++ b/views/products/creacionProd.ejs
@@ -51,6 +51,14 @@
             <label for="modelo">Modelo</label>
             <input type="text" class="ingresodato" name="modelo" id="modelo" placeholder="Ingresar modelo">
         </div>
+        <div>
+            <label for="modelo">Modelo</label>
+            <input type="text" class="ingresodato" name="modelo" id="modelo" placeholder="Ingresar modelo">
+        </div>
+<div>
+            <label for="descripcion">Descripción</label>
+            <input type="text" class="ingresodato" name="descripcion" id="descripcion" placeholder="Ingresar modelo">
+        </div>
 
         <div>
             <label for="precio">Precio</label>
