mejoras en frontend

--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -22,7 +22,7 @@
         <div  class="rs-flex-container"v">
             <h2>Seguinos: </h2>
 <div class="flex-item-fb">
-<a href="#" aria-label="link, se abre en una ventana nueva facebook"><i class="fa-brands fa-facebook fa-beat-fade"></i></a> </a>
+<a href="#" aria-label="link Facebook, se abre en una ventana nueva"><i class="fa-brands fa-facebook fa-beat-fade"></i></a> </a>
 </div>
 <div class="flex-item-ig">
     <a href="#" aria-label="link instagram, se abre en una ventana nueva"><i class="fa-brands fa-instagram fa-beat-fade"></i> </a>
