--- a/views/products/creacionProd.ejs
+++ b/views/products/creacionProd.ejs
@@ -6,13 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chaltu Bags    </title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-            rel="stylesheet" />
-            <script src="https://kit.fontawesome.com/997049d577.js" crossorigin="anonymous"></script>
-            
-            <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/997049d577.js" crossorigin="anonymous"></script>
     
-    </head>
+    <link rel="stylesheet" href="../css/styles.css">
+
+
+</head>
     
 <body>
     <header class = "top-header"> 
@@ -46,18 +47,13 @@
             <label for="articulo">Articulo</label>
             <input type="text" class="ingresodato" name="articulo" id="articulo" placeholder="Ingresar articulo" required autofocus>
         </div>
-        
         <div>
             <label for="modelo">Modelo</label>
-            <input type="text" class="ingresodato" name="modelo" id="modelo" placeholder="Ingresar modelo">
-        </div>
-        <div>
-            <label for="modelo">Modelo</label>
-            <input type="text" class="ingresodato" name="modelo" id="modelo" placeholder="Ingresar modelo">
+            <input type="text" class="ingresodato" name="modelo" id="modelo" placeholder="Ingresar modelo" required>
         </div>
 <div>
             <label for="descripcion">Descripción</label>
-            <input type="text" class="ingresodato" name="descripcion" id="descripcion" placeholder="Ingresar modelo">
+            <input type="text" class="ingresodato" name="descripcion" id="descripcion" placeholder="Ingresar descripción">
         </div>
 
         <div>
