--- a/views/products/detail.ejs
+++ b/views/products/detail.ejs
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Descripción de Producto </title>
-
-    <link rel="stylesheet" type="text/css" href="../css/detalle.css">
-
+    <title> editar producto</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/997049d577.js" crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" href="../css/styles.css">
 
 </head>
+
 <body>
     
 
@@ -40,7 +44,7 @@
  <main id="irContenido">
 
  <div class="product-container">
-    <img <%= product.imagen %> alt="Descripción de la imagen">
+    <img src="../images/<%= product.imagen %>" alt="Descripción de la imagen">
 </div>   
 
 <div class="product-container" >
