--- a/views/products/list.ejs
+++ b/views/products/list.ejs
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../css/boton.css">
     
     <title>Chaltu Bags Productos</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/997049d577.js" crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" href="../css/styles.css">
+
 </head>
 
 <body>
@@ -31,18 +36,19 @@
     
                
         <%- include("../partial/navbar") -%>
-    </header>
-    
+    </header>    
         
     <main id="irContenido">
         <div>
-            <h2> PRODUCTOS</h2>
+            <h2> PRODUCTOS
+
+            </h2>
         </div>
     <% productos.forEach(producto => { %>
         
         <div class="product-container">
             
-            <img <%= producto.imagen %> alt="Descripción de la imagen">
+            <img src="../images/<%= producto.imagen %>" alt="Descripción de la imagen">
             <h3><a href = "<%=producto.id%>">
                 <%= producto.articulo %>
                 <%= producto.modelo %>
